# liz-desktop

./: .gitignore  .npmignore  API.md  CHANGELOG.md  CLAUDE.md  README.md  architecture.md  baixar-linux-build.cmd  baixar-linux-build.ps1  index.ts  package.json
.github/workflows/: android-apk.yml  docker.yml  tauri-linux.yml
desktop-tauri/: package-lock.json  package.json
desktop-tauri/scripts/: post-build-rename.js  prepare-app.js
desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop-tauri/src-tauri/icons/: icon.icns
desktop-tauri/src-tauri/src/: main.rs
docs/: kiro-translator.md
frontend/public/: _headers  _planos_script_check.js  crown-stream.html  index.html  login.html  planos.html  register.html  server-node.html
frontend/scripts/: build-index.js  serve-static.js
frontend/styles/: style.css
mobile-android/: capacitor.config.json  package-lock.json  package.json
mobile-android/scripts/: copy-web.js
scripts/: asset-benchmark.ts  embed-animation.ts  embed-logos.ts  inspect-kiro-sdk.ts
src/: constants.ts  cors.ts  types.ts
src/auth/: orchestrator.ts  server.ts
src/commands/: add.ts  cline.ts  openclaude.ts  openclaw.ts  opencode.ts  serve.ts  status.ts  up-shared.ts
src/db/: accounts.ts  pools.ts
src/providers/: free-overrides.ts  model-fetcher.ts  registry.ts
src/proxy/: chat-handler.ts  claude-translator.ts  codex-translator.ts  gemini-translator.ts  (+5 more)
state/: README.md
tests/: fallback.test.ts  logos.test.ts  messages-translator.test.ts  remote-callback-listener.test.ts  server-cors.test.ts  upstream.test.ts  utils.test.ts
(+45 files in other folders)
