[package]
name = "liz"
version = "1.0.0"
description = "Liz Desktop App"
authors = ["Liz Brasil"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
